add bootstrap them to requirements

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/pathauto": "^1.0",
         "drupal/responsive_menu": "^2.4",
         "drupal/token": "^1.0",
-        "drupal/views_slideshow": "^4.5"
+        "drupal/views_slideshow": "^4.5",
+        "drupal/bootstrap": "^3.6"
     }
 }
